<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4E4B6"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonIntentService"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/intent_service"
        app:layout_constraintBottom_toTopOf="@+id/buttonJobDispatcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForegroundService" />

    <Button
        android:id="@+id/buttonWorkManager"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/work_manager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAlarmManager" />

    <Button
        android:id="@+id/buttonJobInentService"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/job_intent_service"
        app:layout_constraintBottom_toTopOf="@+id/buttonAlarmManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJobDispatcher" />

    <Button
        android:id="@+id/buttonSimpleService"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/service"
        app:layout_constraintBottom_toTopOf="@+id/buttonForegroundService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonForegroundService"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service"
        app:layout_constraintBottom_toTopOf="@+id/buttonIntentService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSimpleService" />

    <Button
        android:id="@+id/buttonAlarmManager"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/alarm_manager"
        app:layout_constraintBottom_toTopOf="@+id/buttonWorkManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonJobInentService" />

    <Button
        android:id="@+id/buttonJobDispatcher"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/job_dispatcher"
        app:layout_constraintBottom_toTopOf="@+id/buttonJobInentService"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIntentService" />

</androidx.constraintlayout.widget.ConstraintLayout>